--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <br>
-    <img src="Tarjeta Personal Licenciada Marketing Organico Rosa (1).gif" alt="">
+    <img class="tarjeta" src="Tarjeta Personal Licenciada Marketing Organico Rosa (1).gif" alt="">
       <br>
       
  
